k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ridendine
  labels:
    name: ridendine
    app: ridendine
    environment: production
